use Files.walk to read files